crates/language-v2/tests/src/fail/p3_references/unnecessary_lexical_context_switch/test.stderr
error: Unnecessary switch to the same lexical context.
  --> src/fail/p3_references/unnecessary_lexical_context_switch/test.rs:16:50
   |
16 |                         switch_lexical_context = ContextA,
   |                                                  ^^^^^^^^
